2009-12-16  Richard Guenther  <rguenther@suse.de>

PR lto/42392
	* langhooks.c (lhd_begin_section): Make sure to switch back
	to the text section, not some random one.

	* gcc.dg/lto/20091216-1_0.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155298 138bc75d-0d04-0410-961f-82ee72b054a4