gcc/testsuite/gcc.dg/lto/20091216-1_0.c
@@ -1,0 +1,9 @@
+/* { dg-lto-do run } */
+
+asm (".globl start; start: nop");
+
+int
+main ()
+{
+  return 0;
+}
